internal/xds/translator/testdata/out/xds-ir/authorization-path.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: allow-public-prefix
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    andMatcher:
                      predicate:
                      - singlePredicate:
                          input:
                            name: http_header
                            typedConfig:
                              '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                              headerName: :path
                          valueMatch:
                            safeRegex:
                              googleRe2: {}
                              regex: ^/public(/.*|\?.*|#.*|;.*|$)
                      - orMatcher:
                          predicate:
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: x-user-id
                              valueMatch:
                                exact: john
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: x-user-id
                              valueMatch:
                                exact: alice
                - onMatch:
                    action:
                      name: allow-admin-exact
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    andMatcher:
                      predicate:
                      - notMatcher:
                          singlePredicate:
                            input:
                              name: http_header
                              typedConfig:
                                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                headerName: :path
                            valueMatch:
                              exact: /admin
                      - singlePredicate:
                          input:
                            name: http_header
                            typedConfig:
                              '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                              headerName: x-role
                          valueMatch:
                            exact: admin
                - onMatch:
                    action:
                      name: deny-non-private
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        action: DENY
                        name: DENY
                  predicate:
                    andMatcher:
                      predicate:
                      - singlePredicate:
                          input:
                            name: http_header
                            typedConfig:
                              '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                              headerName: :path
                          valueMatch:
                            safeRegex:
                              googleRe2: {}
                              regex: ^/private/.*
                      - singlePredicate:
                          input:
                            name: http_header
                            typedConfig:
                              '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                              headerName: x-team
                          valueMatch:
                            exact: red
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
